--- a/less/index.less
+++ b/less/index.less
@@ -1,3 +1,6 @@
+@import "variables.less";
+@import "mixins.less";
+
 // Is this working?
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -55,5 +58,75 @@ table {
 
 html, body {
 	height: 100%;
+	margin: 0 auto;
+	max-width: @maxWidthWebsite;
+	font-family: Arial, Helvetica, sans-serif;
+
+	nav {
+		margin: 20px 0;
+		width: 40%;
+		margin-left: 60%;
+		.row();
+		a {
+			color: black;
+			text-decoration: none;
+		}
+	}
+
+	header{
+		background-color: @light;
+		padding: 40px 20px 60px;
+		margin-bottom: 25px;
+		figure {
+			width: 40%;
+			height: 200px;
+			overflow: hidden;
+			margin-bottom: 20px;
+			img {
+				width: 100%;
+			}
+		}
+		h1 {
+			font-size: 300%;
+			margin-bottom: 15px;
+		}
+		h4 {
+			font-size: 120%;
+			margin-bottom: 50px;
+		}
+		button {
+			margin-top: 15px;
+			background-color: @dark;
+			border: none;
+			height: 30px;
+			color: white;
+			border-radius: 3px;
+		}
+	}
+
+	main {
+		div:first-child {
+			.row();
+			section {
+				width: 48%;
+				h2 {
+					font-size: 200%;
+					margin-bottom: 15px;
+				}
+				h3 {
+					font-size: 150%;
+					margin-bottom: 10px;
+				}
+				ul {
+					border: 1px solid @light;
+					li {
+						border-bottom: 1px solid @light;
+						padding: 10px 15px;
+					}
+				}
+			}
+			
+		}
+	}
 }
 
