--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,6 @@
-// max width for website
+// max width for website and desktop
 @maxWidthWebsite: 800px;
 @maxWidthMobile: 500px;
-
-// base font sizes
-@defaultFontSize: 100%;
-@mobileFontSize: 150%;
 
 // colors
 @light: lightgrey;
