--- a/less/index.less
+++ b/less/index.less
@@ -154,6 +154,31 @@ html, body {
 		padding: 15px 0 30px;
 		p {
 			text-align: center;
+			color: white
+		}
+	}
+
+	@media(max-width: @maxWidthMobile) {
+		padding: 10px;
+		nav {
+			width: 100%;
+			margin: 20px 0;
+			padding: 10px;
+		}
+		header {
+			h1 {
+				font-size: 200%;
+			}
+		}
+
+		main {
+			div:first-child {
+				.column();
+				section {
+					width: 100%;
+					margin-top: 20px;
+				}
+			}
 		}
 	}
 }
