--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,3 +2,8 @@
     display: flex;
     justify-content: space-between;
 }
+.column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
